--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "homepage": "https://github.com/open-tech-world/create-node-lib#readme",
   "dependencies": {
-    "chalk": "^2.4.2"
+    "chalk": "^2.4.2",
+    "log-symbols": "^3.0.0",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
