--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/open-tech-world/create-node-lib#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "globby": "^9.2.0",
     "inquirer": "^6.3.1",
     "log-symbols": "^3.0.0",
     "shelljs": "^0.8.3"
