--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "chalk": "^2.4.2",
     "globby": "^9.2.0",
     "inquirer": "^6.3.1",
-    "log-symbols": "^3.0.0",
-    "shelljs": "^0.8.3"
+    "log-symbols": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
