--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "globby": "^9.2.0",
     "handlebars": "^4.1.2",
     "inquirer": "^6.3.1",
-    "log-symbols": "^3.0.0"
+    "log-symbols": "^3.0.0",
+    "ora": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
