--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.17.2",
     "husky": "^2.3.0",
     "lint-staged": "^8.1.7",
@@ -52,12 +53,11 @@
     }
   },
   "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ],
     "*.{js,css,json,md}": [
       "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
       "git add"
     ]
   }
