Add fields to readme in cli template

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
       "eslint --fix"
     ],
     "*.{js,css,json,md}": [
-      "prettier --write",
+      "prettier --ignore-path .prettierignore --config .prettierrc.js --write",
       "git add"
     ]
   }
