Add emoji to completed msg

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "globby": "^9.2.0",
     "handlebars": "^4.1.2",
     "inquirer": "^6.3.1",
-    "log-symbols": "^3.0.0",
+    "node-emoji": "^1.10.0",
     "ora": "^3.4.0"
   },
   "devDependencies": {
