--- a/lib/templates/cli/package.json
+++ b/lib/templates/cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "{{packageName}}",
+  "name": "{{pkgName}}",
   "version": "0.0.0",
-  "description": "{{packageDesc}}",
+  "description": "{{pkgDesc}}",
   "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,14 +10,14 @@
     "node": ">=10"
   },
   "bin": {
-    "{{packageName}}": "cli.js"
+    "{{pkgName}}": "cli.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/{{repoPath}}.git"
   },
   "keywords": [
-  {{#each packageKeywords}}
+  {{#each pkgKeywords}}
    "{{ this }}",
   {{/each}}
   ],
