--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "handlebars": "^4.1.2",
     "inquirer": "^6.3.1",
     "node-emoji": "^1.10.0",
-    "ora": "^3.4.0"
+    "ora": "^3.4.0",
+    "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
