Add vaildations to questions

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/open-tech-world/create-node-lib#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "email-regex": "^3.0.0",
     "globby": "^9.2.0",
     "handlebars": "^4.1.2",
     "inquirer": "^6.3.1",
