--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js CLI tool for creating modern node libraries.",
   "main": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "engines": {
     "node": ">=10"
@@ -55,6 +56,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.17.2",
     "husky": "^2.3.0",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
     "prettier": "1.17.1"
   },
