--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js CLI tool for creating modern node libraries.",
   "main": "cli.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "lint": "eslint ."
   },
   "engines": {
@@ -55,6 +55,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.6.4",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
