--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "inquirer": "^6.3.1",
     "node-emoji": "^1.10.0",
     "ora": "^3.4.0",
+    "rmfr": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
