--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-node-lib",
+  "name": "@open-tech-world/create-node-lib",
   "version": "0.0.0",
   "description": "Node.js CLI tool for creating modern node libraries.",
   "main": "cli.js",
@@ -75,5 +75,8 @@
       "prettier --ignore-path .prettierignore --config .prettierrc.js --write",
       "git add"
     ]
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
