--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "email-regex": "^3.0.0",
+    "execa": "^1.0.0",
     "globby": "^9.2.0",
     "handlebars": "^4.1.2",
     "inquirer": "^6.3.1",
     "node-emoji": "^1.10.0",
     "ora": "^3.4.0",
+    "p-each-series": "^2.1.0",
     "rmfr": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
   },
