--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-emoji": "^1.10.0",
     "ora": "^3.4.0",
     "p-each-series": "^2.1.0",
+    "p-map": "^2.1.0",
     "rmfr": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
   },
