--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ora": "^3.4.0",
     "p-each-series": "^2.1.0",
     "p-map": "^2.1.0",
+    "prettier": "^1.18.2",
     "rmfr": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
   },
@@ -63,8 +64,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
-    "lint-staged": "^8.1.7",
-    "prettier": "1.17.1"
+    "lint-staged": "^8.1.7"
   },
   "husky": {
     "hooks": {
