Add rollup plugins to mod template

--- a/lib/templates/module/package.json
+++ b/lib/templates/module/package.json
@@ -29,5 +29,6 @@
   },
   "homepage": "https://github.com/{{repoPath}}#readme",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {},
+  "files": ["dist"]
 }
