--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@open-tech-world/create-node-lib",
+  "name": "@open-tech-world/create-es-lib",
   "version": "1.3.0",
-  "description": "Node.js CLI tool for creating modern node libraries.",
+  "description": "Node.js CLI tool for creating modern ES libraries.",
   "main": "cli.js",
   "scripts": {
     "test": "jest --watch",
