--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "cli.js",
   "scripts": {
     "test": "jest --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "tsc"
   },
   "engines": {
     "node": ">=10"
@@ -63,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^24.8.0",
     "jest-extended": "^0.11.1",
-    "rmfr": "^2.0.0"
+    "rmfr": "^2.0.0",
+    "typescript": "^4.3.4"
   }
 }
