--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "engines": {
     "node": ">=10"
   },
-  "bin": {
-    "create-es-lib": "cli.js"
-  },
+  "bin": "cli.js",
   "files": [
     "cli.js",
     "lib"
@@ -42,12 +40,12 @@
   "homepage": "https://github.com/open-tech-world/create-node-lib#readme",
   "dependencies": {
     "camelcase": "^5.3.1",
-    "chalk": "^2.4.2",
+    "chalk": "^4.1.1",
     "email-regex": "^3.0.0",
     "execa": "^1.0.0",
     "globby": "^9.2.0",
     "handlebars": "^4.1.2",
-    "inquirer": "^6.3.1",
+    "inquirer": "^8.1.1",
     "node-emoji": "^1.10.0",
     "ora": "^3.4.0",
     "p-each-series": "^2.1.0",
@@ -57,6 +55,8 @@
     "yargs": "^17.0.1"
   },
   "devDependencies": {
+    "@types/inquirer": "^7.3.2",
+    "@types/yargs": "^17.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.3.0",
