--- a/package.json
+++ b/package.json
@@ -41,20 +41,22 @@
   "dependencies": {
     "camelcase": "^5.3.1",
     "chalk": "^4.1.1",
+    "ejs": "^3.1.6",
     "email-regex": "^3.0.0",
     "execa": "^1.0.0",
-    "globby": "^9.2.0",
-    "handlebars": "^4.1.2",
+    "globby": "^11.0.4",
+    "handlebars": "^4.7.7",
     "inquirer": "^8.1.1",
     "node-emoji": "^1.10.0",
-    "ora": "^3.4.0",
+    "ora": "^5.4.1",
     "p-each-series": "^2.1.0",
     "p-map": "^2.1.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "validate-npm-package-name": "^3.0.0",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
+    "@types/ejs": "^3.0.6",
     "@types/inquirer": "^7.3.2",
     "@types/yargs": "^17.0.0",
     "eslint": "^5.16.0",
@@ -66,6 +68,6 @@
     "jest": "^24.8.0",
     "jest-extended": "^0.11.1",
     "rmfr": "^2.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.5"
   }
 }
