--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest-extended": "^0.11.1",
     "rmfr": "^2.0.0",
     "rollup": "^2.52.7",
+    "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.3.5"
   }
 }
