--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --watch",
     "build": "rollup -c",
-    "build:w": "tsc --watch"
+    "build:w": "rollup -c -w"
   },
   "engines": {
     "node": ">=10"
@@ -59,7 +59,9 @@
     "@open-tech-world/rollup-plugin-clean": "^0.7.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/ejs": "^3.0.6",
+    "@types/globby": "^9.1.0",
     "@types/inquirer": "^7.3.2",
+    "@types/ora": "^3.2.0",
     "@types/yargs": "^17.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
