Update eslint & prettier

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "homepage": "https://github.com/open-tech-world/create-node-lib#readme",
   "dependencies": {
-    "camelcase": "^5.3.1",
+    "camelcase": "^6.2.0",
     "chalk": "^4.1.1",
     "ejs": "^3.1.6",
     "email-regex": "^3.0.0",
@@ -51,7 +51,7 @@
     "ora": "^5.4.1",
     "p-each-series": "^2.1.0",
     "p-map": "^2.1.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.3.2",
     "validate-npm-package-name": "^3.0.0",
     "yargs": "^17.0.1"
   },
@@ -62,13 +62,15 @@
     "@types/globby": "^9.1.0",
     "@types/inquirer": "^7.3.2",
     "@types/ora": "^3.2.0",
-    "@types/yargs": "^17.0.0",
-    "eslint": "^5.16.0",
+    "@types/yargs": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^24.8.0",
     "jest-extended": "^0.11.1",
     "rmfr": "^2.0.0",
