--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@open-tech-world/create-es-lib",
   "version": "1.3.0",
   "description": "Node.js CLI tool for creating modern ES libraries.",
-  "main": "cli.js",
+  "type": "module",
   "scripts": {
     "test": "jest --watch",
     "build": "rollup -c",
@@ -41,16 +41,16 @@
   "dependencies": {
     "camelcase": "^6.2.0",
     "chalk": "^4.1.1",
+    "commander": "^8.0.0",
     "ejs": "^3.1.6",
-    "email-regex": "^3.0.0",
+    "email-regex": "^5.0.0",
     "execa": "^1.0.0",
     "globby": "^11.0.4",
     "inquirer": "^8.1.1",
     "ora": "^5.4.1",
     "p-each-series": "^2.1.0",
     "p-map": "^2.1.0",
-    "prettier": "^2.3.2",
-    "yargs": "^17.0.1"
+    "prettier": "^2.3.2"
   },
   "devDependencies": {
     "@open-tech-world/rollup-plugin-clean": "^0.7.1",
@@ -63,8 +63,7 @@
     "@types/yargs": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.6.4",
