--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js CLI tool for creating modern ES libraries.",
   "type": "module",
   "scripts": {
-    "test": "jest --watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "rollup -c",
     "build:w": "rollup -c -w"
   },
@@ -44,7 +44,6 @@
     "commander": "^8.0.0",
     "ejs": "^3.1.6",
     "email-regex": "^5.0.0",
-    "execa": "^1.0.0",
     "globby": "^11.0.4",
     "inquirer": "^8.1.1",
     "ora": "^5.4.1",
@@ -60,16 +59,13 @@
     "@types/inquirer": "^7.3.2",
     "@types/ora": "^3.2.0",
     "@types/prettier": "^2.3.1",
-    "@types/yargs": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^24.8.0",
-    "jest-extended": "^0.11.1",
+    "jest": "^27.0.6",
     "rmfr": "^2.0.0",
     "rollup": "^2.52.7",
     "rollup-plugin-copy": "^3.4.0",
