--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/ejs": "^3.0.6",
     "@types/globby": "^9.1.0",
     "@types/inquirer": "^7.3.2",
+    "@types/jest": "^26.0.23",
     "@types/ora": "^3.2.0",
     "@types/prettier": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
