--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "author": {
     "name": "Thanga Ganapathy",
     "email": "ganapathy888@gmail.com",
-    "url": "https://ganapathy888.github.io"
+    "url": "https://thanga-ganapathy.github.io"
   },
   "license": "MIT",
   "bugs": {
