--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
+    "fast-glob": "^3.2.6",
     "jest": "^27.0.6",
     "rmfr": "^2.0.0",
     "rollup": "^2.52.7",
