--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "rollup": "^2.52.7",
     "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.3.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
