Use prepare script to run build before publishing

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "rollup -c",
     "build:w": "rollup -c -w",
-    "publish": "yarn build && npm publish"
+    "prepare": "yarn build"
   },
   "engines": {
     "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
