--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -2,7 +2,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build
+name: Linux Build
 
 on:
   push:
@@ -12,18 +12,11 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-        node_version:
-          - 12
-          - 14
-          - 16
-    name: Node ${{ matrix.node_version }} on ${{ matrix.os }}
+        node: [ '12', '14', '16' ]
+    name: Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
