--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "email-regex": "^5.0.0",
     "fast-glob": "^3.2.6",
     "inquirer": "^8.1.1",
+    "normalize-path": "^3.0.0",
     "ora": "^5.4.1",
     "prettier": "^2.3.2"
   },
@@ -57,6 +58,7 @@
     "@types/ejs": "^3.0.6",
     "@types/inquirer": "^7.3.2",
     "@types/jest": "^26.0.23",
+    "@types/normalize-path": "^3.0.0",
     "@types/ora": "^3.2.0",
     "@types/prettier": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
