--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-tech-world/create-es-lib",
   "version": "0.3.0",
-  "description": "Node.js CLI tool for creating modern ES libraries.",
+  "description": "Node.js CLI tool for creating modern ECMAScript libraries.",
   "type": "module",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
