--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "rollup -c",
-    "build:w": "rollup -c -w",
+    "start": "rollup -c -w",
     "prepare": "yarn build"
   },
   "engines": {
@@ -45,9 +45,9 @@
   },
   "homepage": "https://github.com/open-tech-world/create-node-lib#readme",
   "dependencies": {
-    "@open-tech-world/es-utils": "^0.5.0",
-    "chalk": "^4.1.1",
-    "commander": "^8.0.0",
+    "@open-tech-world/es-cli-styles": "^0.1.2",
+    "@open-tech-world/es-utils": "^0.6.0",
+    "commander": "^8.1.0",
     "ejs": "^3.1.6",
     "fast-glob": "^3.2.7",
     "inquirer": "^8.1.2",
@@ -64,14 +64,14 @@
     "@types/normalize-path": "^3.0.0",
     "@types/ora": "^3.2.0",
     "@types/prettier": "^2.3.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.31.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
-    "rollup": "^2.53.2",
+    "rollup": "^2.55.1",
     "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.3.5"
   },
